--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.7.5",
+    "angular-auto-complete": "^1.7.4",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
+    "angular-sanitize": "^1.8.2",
     "html5-boilerplate": "0.0.1"
   },
   "devDependencies": {
